# jobscraper

./: pyproject.toml
jobscraper/: __main__.py
tests/: test_jobscraper.py
